--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization = true
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
